# Doom-console-ESP32

./: README.md
Games/Render-Test/: CMakeLists.txt  partitions.csv  sdkconfig
Games/Render-Test/components/McESP/: CMakeLists.txt  MC_main.c  MC_main.h  draw.c  draw.h
Games/Render-Test/components/console/: JTextBox.java  Main.java
Games/Render-Test/main/: CMakeLists.txt  main.c  spi_master_example_main.c  spi_master_example_main.h  tempCodeRunnerFile.c
Games/esp32-doom-master/: CMakeLists.txt  Makefile  doom1-cut.wad  partitions.csv  readme.rst  sdkconfig
Games/esp32-doom-master/components/Net/: i_espNet.c  iespNet.h
Games/esp32-doom-master/components/i2cdev/: i2cdev.c  i2cdev.c~
Games/esp32-doom-master/components/mcp23x17/: CMakeLists.txt  mcp23x17.c  mcp23x17.h
Games/esp32-doom-master/components/prboom/: CMakeLists.txt  config.h  d_client.c  d_deh.c  d_main.c  d_server.c  doomtype.h  g_game.c  i_network.h  i_system.h  info.c  lprintf.c  m_argv.c  m_cheat.c  m_menu.c  m_misc.c  m_misc.h  m_random.h  p_setup.c  r_bsp.c  r_data.c  r_draw.c  r_main.c  r_plane.c  r_segs.c  sounds.h  v_video.c  w_wad.c  wifi_connect.c  z_zone.c
Games/esp32-doom-master/components/prboom-esp32-compat/: CMakeLists.txt  d_server----.cc  gamepad.c  i_main.c  i_network.c  i_system.c  i_udc.c  i_video.c  mcp23017.c  psxcontroller.c  spi_lcd.c
Games/esp32-doom-master/main/: CMakeLists.txt  Front.h  LCD_startup.c  LCD_startup.h  Render.c  Render.h  app_main.c
Games/esp32-doom-master/mainFiles/: CMakeLists.txt  Front.h  LCD_startup.c  LCD_startup.h  main.c
(+65 files in other folders)
